@@ -70,7 +70,7 @@ AC_SUBST(LIBGNOMEPRINT_REQUIRED)
 AC_SUBST(LIBGNOMEPRINTUI_REQUIRED)
 AC_SUBST(LIBGNOMECANVAS_REQUIRED)
 AC_SUBST(LIBGLADE_REQUIRED)
-               
+
 
 dnl ---------------------------------------------------------------------------
 dnl - GLABELS prerequisites
@@ -130,6 +130,16 @@ AM_CONDITIONAL(HAVE_NEW_MIME, test x$UPDATE_MIME_DATABASE != xno)
 
 AC_PATH_PROG(UPDATE_DESKTOP_DATABASE, update-desktop-database, no)
 AM_CONDITIONAL(HAVE_NEWER_MIME, test x$UPDATE_DESKTOP_DATABASE != xno)
+
+AC_ARG_ENABLE(update-mimedb, AC_HELP_STRING([--disable-update-mimedb],
+              [disable the update-mime-database after install [default=no]]),,
+              enable_update_mimedb=yes)
+AM_CONDITIONAL(ENABLE_UPDATE_MIMEDB, test x$enable_update_mimedb = xyes)
+
+AC_ARG_ENABLE(update-desktopdb, AC_HELP_STRING([--disable-update-desktopdb],
+              [disable the update-desktop-database after install [default=no]]),,
+              enable_update_desktopdb=yes)
+AM_CONDITIONAL(ENABLE_UPDATE_DESKTOPDB, test x$enable_update_desktopdb = xyes)
 
 
 dnl ---------------------------------------------------------------------------
